[metadata]
name = ragtime
version = 0.1.0
description = Retrieval-Augmented Generation server and utilities
author = Eduardo
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    fastapi
    uvicorn
    pydantic
    langdetect
    sentence-transformers
    chromadb
    openai
    aiohttp

[options.packages.find]
where = src
